# pdvrdt

./: README.md
demo_image/: data.z
src/: CMakeLists.txt  args.cpp  args.h  common.h  compile_pdvrdt.sh  compression.cpp  compression.h  conceal.cpp  conceal.h  encryption.bak  encryption.cpp  encryption.h  fileChecks.cpp  image.cpp  image.h  information.cpp  io_utils.cpp  io_utils.h  lodepng_crc32.cpp  main.cpp  masto.txt  pdvex.cpp  pdvin.cpp  pdvin.h  pdvrdt  pdvrdt.cpp  pdvrdt_no_comments.cpp  png_utils.cpp  png_utils.h  profileVec.cpp  profileVec.h  programArgs.cpp  recover.cpp  recover.h
src/linux_executable/: pdvex  pdvin  pdvrdt
src/lodepng/: lodepng_build.cpp  lodepng_config.h  lodepng_zlib_adapter.h
src/pdvin/: compile_pdvin.sh  copyChunks.cpp  copyChunks.h  crc32.cpp  deflate.cpp  deflateFile.cpp  deflateFile.h  encrypt.cpp  encryptFile.cpp  eraseChunks.cpp  erase_chunks.cpp  fileChecks.cpp  fourBytes.cpp  four_bytes.cpp  getByteValue.cpp  getVecSize.cpp  information.cpp  main.cpp  pdvIn.cpp  pdvIn.h  pdvin.cpp  pdvin.h  profileVec.cpp  profileVec.h  programArgs.cpp  programArgs.h  searchFunc.cpp  searchFunc.h  valueUpdater.cpp  value_updater.cpp  writeFile.cpp
src/pdvout/: compile_pdvout.sh  decrypt.cpp  decryptFile.cpp  fileChecks.cpp  fourBytes.cpp  getByteValue.cpp  getPin.cpp  getVecSize.cpp  inflate.cpp  inflateFile.cpp  information.cpp  main.cpp  pdvOut.cpp  pdvOut.h  pdvout.cpp  pdvout.h  programArgs.cpp  searchFunc.cpp  valueUpdater.cpp
src/pdvrdt/: fileChecks.cpp  main.cpp  profileVec.cpp  programArgs.h
src/tests/: close_eintr_shim.cpp  create_testdata.sh  generate_golden.sh  input_snapshot_test.cpp  run_golden_tests.sh  run_image_regression_tests.sh  run_roundtrip_tests.sh  run_safety_regression_tests.sh  run_terminal_regression_tests.py
src/tests/golden/: manifest.tsv
src/tests/testdata/payloads/: payload_text.txt
